--- a/index.ipynb
+++ b/index.ipynb
@@ -38,12 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentence = \"woW WE LOVE cOdInG and strINGS!\"\n",
-    "sentence"
+    "sentence = \"woW WE LOVE cOdInG and strINGS!\".capitalize()"
    ]
   },
   {
@@ -55,12 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flatiron_mantra = \"learn. love. code.\"\n",
-    "flatiron_mantra"
+    "flatiron_mantra = \"learn. love. code.\".title()"
    ]
   },
   {
@@ -72,12 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_to_string = 1234\n",
-    "num_to_string"
+    "num_to_string = str(1234)"
    ]
   },
   {
@@ -89,11 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1234 Abc street, Hometown USA'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "full_address = None + \" Abc street, Hometown USA\"\n",
+    "full_address = str(num_to_string) + \" Abc street, Hometown USA\"\n",
     "full_address"
    ]
   },
